table no longer inherit vertical align

--- a/src/table.css
+++ b/src/table.css
@@ -16,7 +16,6 @@
     border-collapse: collapse;
     border-spacing: 0;
     border-color: inherit;
-    vertical-align: inherit;
     text-align: left;
     font-weight: inherit;
     font-size: 14px;
